--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -1,10 +1,10 @@
 .footer__main {
   color: white;
-  margin-top: 30rem;
+  /* margin-top: 30rem;
   max-width: 1470px;
   margin-left: auto;
   margin-right: auto;
-  padding: 30px;
+  padding: 30px; */
 }
 
 .column__A {
@@ -65,4 +65,9 @@
 .banner__colB {
   float: right;
   /* width: %; */
+}
+
+.footer__links {
+  position: absolute;
+  bottom: 80px;
 }
